- Meal text updated to be more like vanilla

HANDBOOK THINGS:
- Muffins and fruit bread have default visuals in the handbook
- Sap collecting info moved from handbook guide to spile and sap entries - DONE!!!
- More handbook items linked together 

REBALANCING:
- Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
- All charred food has the worst nutrition value to compensate for having the longest perish timer
- Dried fruit rehydrates in meals via cookedStack property
- Cheese in meal patched removed; now handled in vanilla - DONE!!!
- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven - DONE!!!
- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
- Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
- Carrot can be added to fruit bread/muffins, similar to pumpkin
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!
- All sauces are not drinkable; for food use only
- Soaked soybeans require 3 days in barrel, down from 14 - DONE!!!
- Cultured soybeans require 7 days in barrel, down from 14 - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket
- NutritionProps removed from salad dressing - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed