@@ -4,7 +4,13 @@
 	"matterState": "liquid",
 	"attributes": {
 		"handbook": {
-			"ignoreCreativeInvStacks": true
+			"ignoreCreativeInvStacks": true,
+            "extraSections": [
+              {
+                "title": "expandedfoods:item-handbooktitle-fishsauce",
+                "text": "expandedfoods:item-handbooktext-fishsauce"
+              }
+            ]
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		"nutritionPropsWhenInMeal": { "satiety": 50, "foodcategory": "Protein" },
