@@ -34,7 +34,8 @@
       			"game:honeyportion" : { "saturation": 2, "foodcategory": "Fruit" },
       			"expandedfoods:fruitsyrupportion-saguaro" : { "saturation": 6, "health": 0.2, "foodcategory": "Fruit" }, 
       			"expandedfoods:fruitsyrupportion-*" : { "saturation": 6, "health": 0.1, "foodcategory": "Fruit" },
-      			"expandedfoods:treesyrupportion-*" : { "saturation": 4.8, "health": 0.1, "foodcategory": "Fruit" }, 
+      			"expandedfoods:treesyrupportion-*" : { "saturation": 4.8, "health": 0.1, "foodcategory": "Fruit" },
+                "expandedfoods:fishsauce" : { "saturation": 2.5, "health": 0.1, "foodcategory": "Protein" },
       			"expandedfoods:soysauce" : { "saturation": 3, "health": 0.1, "foodcategory": "Protein" }
 			},
 			"*-butter": {
