@@ -143,6 +143,9 @@
   "incontainer-item-fishsauce": "fish sauce",
   "expandedfoods:item-fishsauce": "Fish sauce",
   "expandedfoods:itemdesc-fishsauce": "Umami! Add to sushi, stews, or au gratin for richer flavor.",
+  "item-handbooktitle-fishsauce": "Fish Sauce",
+  "item-handbooktext-fishsauce": "An ancient condiment made from salted, fermented fish. Fish sauce that has been briefly fermented has a strong fishy flavor, which turns nutty and savory with extended fermentation.",
+
 
   "item-breadcrumbs-spelt": "Spelt bread crumbs",
   "item-breadcrumbs-rye": "Rye bread crumbs",
@@ -3868,7 +3871,7 @@
   "item-soyprep-slurry": "Soybean slurry",
   "itemdesc-soyprep-slurry": "Squeeze in a fruit press to make soy sauce.",
   "item-handbooktitle-soyprep": "Soy Processing",
-  "item-handbooktext-soyprep": "Creating <a href=\"handbook://item-expandedfoods:soysauce\">soy sauce</a> or <a href=\"handbook://item-expandedfoods:soymilk-edible\">soy milk</a> is a multi-step process. First, soak soybeans in water for 1 week. The next steps depend on the desired result.<br><br><strong>Making Soy Sauce</strong><br>Roast the soaked soybeans in an oven, then grind the roasted soybeans in a quern. Mix the soybean powder with any grain to culture it. Soak the cultured soybeans with brine for one week to make a soybean slurry, which can be juiced in a fruit press into soy sauce.<br><br><strong>Making Soy Milk</strong><br>Place the soaked soybeans in your crafting grid to de-shell them, then combine with 1 L of water in the crafting grid to wet them. Grind the wettened soybeans in a quern to blend them, then juice the mixture in a fruit press to make soy milk.",
+  "item-handbooktext-soyprep": "Creating <a href=\"handbook://item-expandedfoods:soysauce\">soy sauce</a> or <a href=\"handbook://item-expandedfoods:soymilk-edible\">soy milk</a> is a multi-step process. First, soak soybeans in water for 3 days. The next steps depend on the desired result.<br><br><strong>Making Soy Sauce</strong><br>Roast the soaked soybeans in an oven, then grind the roasted soybeans in a quern. Mix the soybean powder with any grain to culture it. Soak the cultured soybeans with brine for 1 week to make a soybean slurry, which can be juiced in a fruit press into soy sauce.<br><br><strong>Making Soy Milk</strong><br>Place the soaked soybeans in your crafting grid to de-shell them, then combine with 1 L of water in the crafting grid to wet them. Grind the wettened soybeans in a quern to blend them, then juice the mixture in a fruit press to make soy milk.",
 
 
   "item-foodoilportion-soy": "Soybean oil portion",
@@ -3880,6 +3883,8 @@
   "item-breadstarter-wild": "Wild yeast starter",
   "incontainer-item-breadstarter-wild": "Wild yeast",
   "game:incontainer-item-breadstarter-wild": "Wild yeast",
+  "item-handbooktitle-breadstarter": "Bread Starter",
+  "item-handbooktext-breadstarter": "Seal water and dried fruit in a barrel for 6 days to create yeast water, then mix it with salt and flour to create bread starter. As long as you have at least 1 L of bread starter, you can 'feed' it by mixing it with more water and flour in the mixing bowl, keeping it alive indefinitely.<br>Bread starter is an excellent addition to any dough.",
 
   "item-agedmeat-bushmeat-normal": "Aged bushmeat",
   "item-agedmeat-poultry-normal": "Aged poultry",
@@ -7679,6 +7684,10 @@
     "game:meal-ingredient-soup-primary-brothportion-fish": "seafood broth",
     "game:meal-ingredient-soup-secondary-brothportion-fish": "seafood broth",
 
+    "item-handbooktitle-broth": "Musings On Broth",
+    "item-handbooktext-broth": "Broth is an excellent way to stretch out many resources and make them useful for years. By simmering bones, meat, vegetables, or mushrooms in water, wonderful broths can be made. Non-bone broths must be made with partially cooked ingredients, as the roasting process is essential to imparting its flavor onto the water. Broths can be clarified by simmering them with egg white, to coagulate impurities which are then removed by skimming off the top as it cooks.<br>Broth is great in any dough, and it enhances most meals.",
+
+
     "item-limeegg-chicken": "Water-glassed chicken egg",
     "game:recipeingredient-item-limeegg-chicken": "water-glassed chicken eggs",
     "game:recipeingredient-item-limeegg-chicken-insturmentalcase": "water-glassed chicken eggs",
@@ -9489,6 +9498,9 @@
   "recipeingredient-item-dressing-salad": "salad dressing",
   "recipeingredient-item-dressing-salad-insturmentalcase": "salad dressing",
   "itemdesc-dressing-salad": "Tangy and oily, this stuff makes salads and pasta really <i>pop!</i>",
+  "item-handbooktitle-dressing-salad": "Salad Dressing",
+  "item-handbooktext-dressing-salad": "An emulsified mixture of oil and vinegar, mixing egg white further stabilizes it and adds volume. Adding a sweetener such as honey or syrup can give the dressing a rich, deep flavor.",
+
 
   "item-fermentedfish-slop": "Fermented fish slop",
   "itemdesc-fermentedfish-slop": "This smelly pile of unidentifiable fish parts should probably be pressed before it gets even worse.",
