@@ -2,7 +2,7 @@
  {
 	"ingredients": [
 		{"inputs": [{ "type": "item", "code": "expandedfoods:peanutliquid-paste",  "quantity": 10 }]},
-		{"inputs": [{ "type": "item", "code": "expandedfoods:soysauce", "quantity": 10 }]},
+		{"inputs": [{ "type": "item", "code": "expandedfoods:soysauce", "quantity": 10 }, { "type": "item", "code": "expandedfoods:fishsauce", "quantity": 10 }]},
 		{"inputs": [{ "type": "item", "code": "game:honeyportion",  "quantity": 10 }, { "type": "item", "code": "expandedfoods:treesyrupportion-*",  "quantity": 10 }, { "type": "item", "code": "expandedfoods:fruitsyrupportion-*",  "quantity": 10 }]},
 		{"inputs": [{ "type": "item", "code": "game:waterportion",  "quantity": 10 }]}
 	],
@@ -11,7 +11,7 @@
  {
 	"ingredients": [
 		{"inputs": [{ "type": "item", "code": "expandedfoods:peanutliquid-paste",  "quantity": 10 }]},
-		{"inputs": [{ "type": "item", "code": "expandedfoods:soysauce", "quantity": 10 }]},
+		{"inputs": [{ "type": "item", "code": "expandedfoods:soysauce", "quantity": 10 }, { "type": "item", "code": "expandedfoods:fishsauce", "quantity": 10 }]},
 		{"inputs": [{ "type": "item", "code": "game:honeyportion",  "quantity": 10 }, { "type": "item", "code": "expandedfoods:treesyrupportion-*",  "quantity": 10 }, { "type": "item", "code": "expandedfoods:fruitsyrupportion-*",  "quantity": 10 }]},
 		{"inputs": [{ "type": "item", "code": "game:waterportion",  "quantity": 10 }]},
 		{"inputs": [{ "type": "item", "code": "game:salt",  "quantity": 1 }]}
