@@ -636,7 +636,8 @@
 				{ "type": "item", "code": "expandedfoods:fruitsyrupportion-orange",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "orangesyrup"] }, 
 				{ "type": "item", "code": "expandedfoods:fruitsyrupportion-peach",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "peachsyrup"] }, 
 				{ "type": "item", "code": "expandedfoods:fruitsyrupportion-pear",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "pearsyrup"] }, 
-				{ "type": "item", "code": "expandedfoods:fruitsyrupportion-pomegranate",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "pomegranatesyrup"] }, 
+				{ "type": "item", "code": "expandedfoods:fruitsyrupportion-pomegranate",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "pomegranatesyrup"] },
+                { "type": "item", "code": "expandedfoods:peanutliquid-sauce",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "peanutsauce"] },
 				{ "type": "item", "code": "cottagecheeseportion",  "shapeElement": "bowl/cheese1/*", "textureMapping": ["cheesebase", "cottagecheesemelt"]  },
 				{ "type": "item", "code": "expandedfoods:dressing-salad",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "saladdressing"] }
 			],
