@@ -1671,6 +1671,13 @@
   },
   {
     "op": "addmerge",
+    "path": "/textures/peanutsauce",
+    "value": { "base": "expandedfoods:item/food/peanut/sauce" },
+    "side": "server",
+    "file": "blocktypes/clay/fired/pot.json"
+  },
+  {
+    "op": "addmerge",
     "path": "/textures/eggyolkchicken",
     "value": { "base": "item/liquid/eggyolk/chicken" },
     "side": "server",
