@@ -356,7 +356,8 @@
 				{ "type": "item", "code": "expandedfoods:fishsauce",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "fishsauce"] }, 
 				{ "type": "item", "code": "expandedfoods:soysauce",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "fishsauce"] }, 
 				{ "type": "item", "code": "expandedfoods:foodoilportion-*",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "foodoil"] }, 
-				{ "type": "item", "code": "expandedfoods:lard",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "lard"] }, 
+				{ "type": "item", "code": "expandedfoods:lard",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "lard"] },
+                { "type": "item", "code": "expandedfoods:peanutliquid-sauce",  "shapeElement": "bowl/topping/*", "textureMapping": ["topping", "peanutsauce"] },
 				{ "type": "item", "code": "cottagecheeseportion",  "shapeElement": "bowl/cheese1/*", "textureMapping": ["cheesebase", "cottagecheesemelt"]  }
 			],
 			"minQuantity": 0,
